--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with: 
-          pattern: target*
+          pattern: ${{ env.PROJECT_NAME }}-*
           path: target
           merge-multiple: true
 
