--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,32 +134,32 @@ jobs:
           gh release edit $TAG --title "🚀 Latest"
 
           cd ${{ github.workspace }}/target/x86_64-unknown-linux-musl/release
-          chmod cargo-xfmt
+          chmod +x cargo-xfmt
           tar -czf ./cargo-xfmt-linux-amd64.tar.gz cargo-xfmt
           gh release upload $TAG ${{ github.workspace }}/target/x86_64-unknown-linux-musl/release/cargo-xfmt.tar.gz
 
           cd ${{ github.workspace }}/target/aarch64-unknown-linux-musl/release
-          chmod cargo-xfmt
+          chmod +x cargo-xfmt
           tar -czf ./cargo-xfmt-linux-arm64.tar.gz cargo-xfmt
           gh release upload $TAG target/aarch64-unknown-linux-musl/release/cargo-xfmt.tar.gz
 
           cd ${{ github.workspace }}/target/x86_64-apple-darwin/release
-          chmod cargo-xfmt
+          chmod +x cargo-xfmt
           tar -czf ./cargo-xfmt-macos-amd64.tar.gz cargo-xfmt
           gh release upload $TAG target/x86_64-apple-darwin/release/cargo-xfmt.tar.gz
 
           cd ${{ github.workspace }}/target/aarch64-apple-darwin/release/release
-          chmod cargo-xfmt
+          chmod +x cargo-xfmt
           tar -czf ./cargo-xfmt-macos-arm64.tar.gz cargo-xfmt
           gh release upload $TAG target/aarch64-apple-darwin/release/cargo-xfmt.tar.gz
 
           cd ${{ github.workspace }}/target/x86_64-pc-windows-msvc/release
-          chmod cargo-xfmt.exe
+          chmod +x cargo-xfmt.exe
           tar -czf ./cargo-xfmt-windows-amd64.tar.gz cargo-xfmt.exe
           gh release upload $TAG target/x86_64-pc-windows-msvc/release/cargo-xfmt.tar.gz
 
           cd ${{ github.workspace }}/target/aarch64-pc-windows-msvc/release
-          chmod cargo-xfmt.exe
+          chmod +x cargo-xfmt.exe
           tar -czf ./cargo-xfmt-windows-arm64.tar.gz cargo-xfmt.exe
           gh release upload $TAG target/aarch64-pc-windows-msvc/release/cargo-xfmt.tar.gz
 
