--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,6 +94,9 @@ jobs:
       - run: eval $(curl -sSf sh.davidalsh.com/rust.sh | sh)
       - if: matrix.config.run
         run: ${{ matrix.config.run }}
+      - run: sed -i "s/0.0.0-local/${VERSION}/g" Cargo.toml
+        env:
+          VERSION: ${{needs.version.outputs.VERSION}}
       - run: cargo build --release --target ${{ matrix.config.target }}
         # Optional, reduce the artifact size 
       - run: cd target/${{ matrix.config.target }}/release && rm -rf build .fingerprint deps examples incremental
