--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -182,6 +182,6 @@ jobs:
           set -e
           sed "s/0.0.0-local/${VERSION}/g" "Cargo.toml" > "Cargo.toml.new" && mv "Cargo.toml.new" "Cargo.toml"
           cargo publish
-      - env:
+        env:
           CRATES_IO_API_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
           VERSION: ${{needs.version.outputs.VERSION}}
