--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,5 +183,5 @@ jobs:
           sed "s/0.0.0-local/${VERSION}/g" "Cargo.toml" > "Cargo.toml.new" && mv "Cargo.toml.new" "Cargo.toml"
           cargo publish
         env:
-          CRATES_IO_API_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
           VERSION: ${{needs.version.outputs.VERSION}}
