--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 anyhow = "1.0.100"
 clap = { version = "4.5.49", features = ["derive"] }
 normalize-path = "0.2.1"
-serde = { version = "1.0.228", features = ["derive"] }
+parking_lot = "0.12.5"
 toml = "0.9.8"
 
 [profile.release]
